--- a/css/stylearticle.css
+++ b/css/stylearticle.css
@@ -36,6 +36,7 @@ header{
     height: 227px;
     width: 780px;
     border: solid black 2px;
+    
 }
 
 .abboneren-knop{
@@ -62,9 +63,10 @@ h2{
     font-size: 2em;
     font-style: italic;
     font-weight: bold;
-    margin-top: 10px;
     text-align: center;
-    top: 2;
+    width: 1000px;
+    margin: auto;
+    padding-top: 30px;
 }
 
 h3{
@@ -94,12 +96,47 @@ h5{
     text-align: center;
 }
 
+h6{
+    color: white;
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
 .menubutton{
     top: 0;
     position: absolute;
     float: left;
     margin: 20px;
 }
+
+.nav-btn {
+    padding: 16px;
+    border: none;
+}
+
+.hamburger-menu{
+    display: inline-block;
+    position: absolute;
+    top: 0%;
+}
+
+.nav-content {
+    display: none;
+    background-color: #732B4E;
+}
+
+.nav-content .nav-item {
+    color: white;
+    padding: 12px 16px;
+    font-size: 25px;
+    text-decoration: none;
+    display: block;
+}
+
+.nav-content .nav-item:hover {background-color: black;}
+.hamburger-menu:hover .nav-content {display: block;}
 
 .searchbutton{
     top: 0;
@@ -116,13 +153,6 @@ section{
     margin: auto;
 }
 
-.title{
-    height: 189px;
-    width: 1088px;
-    border: solid white 1px;
-    margin: auto;
-}
-
 .anekdote{
     height: 158px;
     width: 1088px;
@@ -133,7 +163,7 @@ section{
 
 .nutshell{
     width: 1246px;
-    height: 350px;
+    height: 150px;
     border: solid white 1px;
     margin: auto;
     margin-top: 30px;
@@ -169,6 +199,14 @@ section{
     border: solid white 1px;
     margin: auto;
     margin-top: 30px;
+}
+
+p{
+ font-size: 1.5em;
+ color: white;
+ text-align: center;
+ margin: 0px 20px 0px 20px;
+ margin-top: 30px;
 }
 
 footer{
