--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 .mainpage-body{
-    background-color: #D85193;
+    background-color: #013B7C;
     color: white;
 }
 
 .article-body{
     background-color: black;
+    color: white;
 }
 
 .mainpage-header{
@@ -15,14 +16,36 @@
     background-size: 1366px;
 }
 
-p{
-    font-size: 1em;
-    color: white;
+.nav-btn {
+    padding: 16px;
+    border: none;
 }
 
-h1{
-    font-size: 4em;
+.hamburger-menu{
+    display: inline-block;
+    position: absolute;
+    top: 0%;
+}
+
+.nav-content {
+    display: none;
+    background-color: #732B4E;
+}
+
+.nav-content .nav-item {
     color: white;
+    padding: 12px 16px;
+    font-size: 25px;
+    text-decoration: none;
+    display: block;
+}
+
+.nav-content .nav-item:hover {background-color: black;}
+.hamburger-menu:hover .nav-content {display: block;}
+
+h1{
+    color: white;
+    font-size: 4em;
     text-decoration-line: underline;
     font-weight: bold;
     margin: 0 auto;
@@ -32,7 +55,6 @@ h1{
 }
 
 h2{
-    color: white;
     font-size: 2em;
     font-style: italic;
     font-weight: bold;
@@ -42,27 +64,35 @@ h2{
 }
 
 h3{
-    color: white;
     text-align: center;
     font-size: 3em;
     padding-top: 30px;
 }
 
 h4{
-    color: white;
     font-size: 1.5em;
     text-align: center;
     margin-top: 12px;
 }
 
-h5{
+a{
     color: white;
+}
+
+h5{
     font-size: 1.5em;
-    width: 350px;
+    width: 360px;
     margin: auto;    
-    padding-top: 130px;
+    padding-top: 100px;
     text-align: center;
 }
+
+h6{
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+} 
 
 .searchbutton{
     top: 0;
@@ -90,6 +120,25 @@ h5{
     padding:0;
     text-align:center;
 }
+
+.footer-nav{
+    border-width:2px 0;
+    list-style:none;
+    text-align:center;
+}
+
+.footer-nav li{
+    display:inline;
+}
+.footer-nav a{
+    display:inline-block;
+    padding:10px;
+    padding-left: 70px;
+    padding-right: 70px;
+    color: white;
+    font-size: 1.5em;
+}
+
 .nav li{
     display:inline;
 }
@@ -104,7 +153,7 @@ h5{
     height: 920px;
     width: 1366px;
     margin: auto;
-    margin-top: 20px;
+    background-color: #D85193;
 }
 
 .divider{
@@ -116,17 +165,18 @@ h5{
     border: 1px solid black;
 }
 
-.bluebox{
-    height: 892px;
+.bigbox{
+    height: 860px;
     width: 629px;
     border: solid white 10px;
     position: absolute;
-    top: 1;
+    margin-top: 30px;
+    margin-left: 30px;
 }
 
-.gamer{
+.lootbox{
     width: 860px;
-    height: 615px;
+    margin-top: 50px;
     margin-left: 158px;
     position: absolute;
 }
@@ -134,22 +184,26 @@ h5{
 .read-more{
     color: white;
     font-size: 1.5em;
-    margin-left: 15px;
-}
+    margin-left: 75px;
+    }
 
-.pinkbox{
-    width: 487px;
-    height: 400px;
-    background-color: #732B4E;
+.smallbox{
+    width: 380px;
+    height: 380px;
+    border: solid white 10px;
     position: absolute;
     margin-left: 900px;
-    margin-top: 300px;
+}
+
+.ethiek{
+    margin-top: 160px;
 }
 
 .textbox{
     width: 480px;
     height: 100px;
     margin: auto;
+    margin-top: 10px;
 }
 
 .news-articles{
@@ -157,7 +211,6 @@ h5{
     height: 2569px;
     background-color: #7F5FA5;
     margin: auto;
-    margin-top: 20px;
 }
 
 .overwatch{
@@ -212,9 +265,9 @@ h5{
 
 .mario{
     height: 440px;
-    width: 1220px;
+    width: 1240px;
     margin-left: 70px;
-    margin-top: 30px;
+    margin-top: 50px;
     border-radius: 50px;
     background-color: #901935;   
 }
@@ -222,76 +275,102 @@ h5{
 .mario-picture{
     height: 440px;
     border-radius: 50px 0 0 50px;
+}
 
+.text-box-mario{
+    width: 500px;
+    height: 400px;
+    float: right;
+    margin-right: 140px;
+    margin-top: 50px;
 }
 
 .coc{
     height: 440px;
-    width: 1220px;
+    width: 1240px;
     margin-left: 70px;
-    margin-top: 30px;
+    margin-top: 50px;
     border-radius: 50px;
     background-color: #CE740D;   
-    
 }
 
 .coc-picture{
     height: 440px;
     border-radius: 50px 0 0 50px;
-
 }
 
-.abboneren{
-    margin: auto;
-    margin-top: 20px;
-    height: 227px;
-    width: 780px;
-    border: solid black 2px;
+.text-box-mario{
+    width: 500px;
+    height: 400px;
+    float: right;
+    margin-right: 140px;
+    margin-top: 50px;
 }
 
-.abboneren-knop{
-    width: 523px;
-    height: 53px;
-    border: solid black 2px;
-    margin: auto;
+.re8{
+    height: 440px;
+    width: 380px;
+    background-color: #9DA1A5;
+    border-radius: 50px;
+    margin-top: 50px;
+    margin-left: 70px;
+    position: absolute;
+}
+
+.re8-picture{
+    width: 380px;
+    height: 220px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.glitched-attraction{
+    height: 440px;
+    width: 380px;
+    background-color: #521C94;
+    border-radius: 50px;
+    margin-top: 50px;
+    margin-left: 500px;
+    position: absolute;
+}
+
+
+.glitched-attraction-picture{
+    width: 380px;
+    height: 220px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.dbd{
+    height: 440px;
+    width: 380px;
+    background-color: #8D0B02;
+    border-radius: 50px;
+    margin-top: 50px;
+    margin-left: 930px;
+}
+
+.dbd-picture{
+    width: 380px;
+    height: 220px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
 }
 
 footer{
     width: 1366px;
     height: 298px;
-    background-color: #013B7C;
+    background-color: #000000;
     bottom: 0;
-    margin-top: 52px;
 }
 
-
-
-.nav-btn {
-    padding: 16px;
-    border: none;
-}
-
-.hamburger-menu{
-    display: inline-block;
-    position: absolute;
-    top: 0%;
-}
-
-.nav-content {
-    display: none;
-    background-color: #732B4E;
-}
-
-.nav-content .nav-item {
-    color: white;
-    padding: 12px 16px;
-    font-size: 25px;
-    text-decoration: none;
-    display: block;
-}
-
-.nav-content .nav-item:hover {background-color: black;}
-.hamburger-menu:hover .nav-content {display: block;}
+.footerline{
+    margin: auto;
+    width: 1000px;
+    height: 10px;
+    border-bottom: solid white 1px;
+    }
 
 .article-header{
     width: 1366px;
@@ -305,7 +384,6 @@ footer{
     height: 500px;
     width: 800px;
     margin-top: 40px;
-    float: left;
 }
 
 .titlebox{
@@ -317,6 +395,18 @@ footer{
     margin-top: 40px;
 }
 
+.portret-leon{
+    width: 100px;
+    border-radius:50%;
+    position: absolute;  
+    margin-left: 30px; 
+}
+
+.credits{
+    padding-top: 30px;
+    margin-left: 100px;
+}
+
 .divider{
     background-color: #DEDDDD;
     width: 1366px;
@@ -325,28 +415,26 @@ footer{
     border: 1px solid black;
 }
 
+.subscriber-section{
+    width: 1366px;
+    height: 230px;
+    margin: auto;
+    background-color: #D85193;
+}
+
 .abboneren{
     margin: auto;
-    margin-top: 20px;
     height: 227px;
     width: 780px;
-    border: solid black 2px;   
+    padding-top: 15px;
 }
 
 .abboneren-knop{
     width: 523px;
     height: 53px;
-    border: solid black 2px;
+    border: solid white 2px;
+    background-color: #000000;
     margin: auto;
-    background-color: black;
-}
-
-h6{
-    color: white;
-    font-size: 2em;
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 30px;
 } 
 
 .hamburger-menu{
@@ -356,80 +444,111 @@ h6{
 }
 
 .article-section{
-    height: 3643px;
+    height: 3900px;
     width: 1366px;
     background-color: #343434;
     margin: auto;
 }
 
+.title{
+    padding-top: 30px;
+    width: 800px;
+    margin: auto;
+}
+
 .anekdote{
     height: 158px;
-    width: 1088px;
-    border: solid white 1px;
+    width: 800px;
     margin: auto;
-    margin-top: 30px;
+    padding-top: 10px;
 }
 
 .nutshell{
-    width: 1246px;
+    width: 800px;
     height: 150px;
-    border: solid white 1px;
     margin: auto;
-    margin-top: 30px;
+    padding-top: 10px;
 }
 
-
 .pc-setup{
-    float: left;
-    margin-top: 30px;
+    margin-top: 110px; 
     margin-left: 30px;
+    width: 560px;
+    height: 373px;
 }
 
 .morality{
-    width: 945px;
-    height: 516px;
-    border: solid white 1px;
-    margin-top: 30px;
-    margin-right: 30px;
+    width: 700px;
+    height: 450px;
+    margin-top: 70px;
+    margin-right: 50px;
     float: right;
 }
 
-
-.lootbox-rage{
-    margin-top: 30px;
-}
-
-.consequences{
-    width: 887px;
-    height: 447px;
-    border: solid white 1px;
-    margin: auto;
-    margin-top: 30px;
-    margin-left: 40px;
+.concequences-picture{
+    margin-top: 100px;
+    margin-left: 50px;
+    width: 500px;
     float: left;
 }
 
-.positive-side{
-    width: 1246px;
-    height: 350px;
-    border: solid white 1px;
+.consequences{
+    width: 800px;
     margin: auto;
-    margin-top: 30px;
-}
-
-.gaming-child{
-margin-top: 30px;
-margin-left: 59px;
+    float: right;
 }
 
 .youth{
-    width: 887px;
-    height: 417px;
-    border: solid white 1px;
+    width: 600px;
+    padding-left: 60px;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 80px;
+    float: left;
+}
+
+.gaming-child{
+    margin-top: 110px;
+    margin-right: 175px;
     float: right;
-    margin-right: 59px;
+}
+
+.measures{
+    width: 800px;
+    height: 510px;
+    margin: auto;
+    margin-top: 1080px;
+}
+
+.deceptive-design{
+ width: 810px;
+ height: 300px;
+ margin: auto;
+
+}
+
+.conclusion{
+    width: 800px;
+    margin: auto;
+}
+
+.sources{
+    width: 800px;
+    margin: auto;
+    margin-top: 50px;
+    height: 820px;
+    border: solid black 2px;
+}
+
+.portrtet-max{
+    width: 400px;
+    margin: 10px;
+}
+
+.credits-max{
+    float: right;
+    width: 300px;
+    margin-right: 45px;
+    margin-top: 100px;
 }
 
 p{
@@ -440,12 +559,15 @@ p{
  margin-top: 30px;
 }
 
+.read-more-small{
+    color: white;
+    font-size: 1.3em;
+}
+
 .article-footer{
     width: 1366px;
     height: 298px;
-    background-color: #4B3E20;
+    background-color: #732B4E;
     bottom: 0;
-    margin-top: 52px;
     margin: auto;
 }
-
